--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - "6379:6379"
 
   selenium:
-    image: selenium/standalone-chrome
+    image: seleniarm/standalone-chromium:latest
     restart: always
     ports:
       - "4444:4444"
@@ -41,9 +41,13 @@ services:
     ports:
       - "3000:3000"
     volumes:
-       - ./grafana/provisioning:/etc/grafana/provisioning
+       - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+       - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=postgres
     depends_on:
       - db
   
